# math-interpreter

./: .gitignore  CMakeLists.txt  Makefile  grammar.txt  readme.maths
src/: main.c  mpc.c
src/include/: parser.h
